# chat_empresas

./: .env example  .gitignore  README.md  database.db  docker-compose.yml  hello.py  pyproject.toml
notebooks/: DuckDB_com_LangGraph.ipynb
src/: base.py  chat.py  client.py  download_dados_empresa.py  main.py  server.py  servev2.py  test copy.py  test.py  teste2.py
src/chat/: authenticate.py  genai_pb2_grpc.py  grpc_client.py  server.py
src/download_empresa/: convert_files.py  convert_toparquet.py  converter_encodding.py  create_duckdb.py  download_dados_empresa.py  downloadv2.py  main.py  union_parquet.py  unzip_files.py
src/scripts/: load_cnpj_duckdb.ddl.sql  load_cnpj_duckdb.py
