[project]
name = "chat-empresas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckdb==1.3.0",
    "duckdb-engine>=0.17.0",
    "grpcio>=1.70.0",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-openai>=0.3.3",
    "langgraph>=0.2.61",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "psutil>=6.1.1",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
    "tqdm>=4.67.1",
]
